--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
   "author": "Antoine SANVOISIN",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "electron": "^28.0.0",
-    "electron-builder": "^24.9.1"
+    "electron-builder": "^24.9.1",
+    "electron-reloader": "^1.2.3"
   }
 }
